{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 635,
  "lineage": "cbb03bc6-d6c8-e32d-a512-d1c9cb5bdc7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ea981fd2d8c08fb",
            "arn": "arn:aws:ec2:us-east-1:726998074318:instance/i-06ee4edc8918e1645",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-089d14fd6fd5176a7",
                "throughput": 0,
                "volume_id": "vol-0704588c065d099d4",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nexus_profile",
            "id": "i-06ee4edc8918e1645",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "prod",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-051b4be49ef6f2a27",
            "private_dns": "ip-10-0-17-155.ec2.internal",
            "private_ip": "10.0.17.155",
            "public_dns": "ec2-54-234-53-15.compute-1.amazonaws.com",
            "public_ip": "54.234.53.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2cf399630b81cea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcfc7de89f1c6133",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "artifacts Nexus Server Instance",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Server",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "artifacts Nexus Server Instance",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Server",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Instance Volume",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Server",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-0d7e9271a932689ed"
            ]
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_iam_instance_profile.nexus_profile",
            "aws_iam_role.cw_logging_role",
            "aws_security_group.nexus-instance",
            "data.aws_ami.nexus",
            "module.sharedservicesvpc.aws_subnet.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:security-group/sg-0798dc4a465fee998",
            "description": "Allow 443 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0798dc4a465fee998",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTPS LB",
            "name_prefix": "",
            "owner_id": "726998074318",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "HTTPS Inbound",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Allow https to Nexus Instance",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "HTTPS Inbound",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Allow https to Nexus Instance",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:security-group/sg-0d7e9271a932689ed",
            "description": "Allow 8081 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7e9271a932689ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0798dc4a465fee998"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "Nexus Instance SG",
            "name_prefix": "",
            "owner_id": "726998074318",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Instance SG",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Allow IO to Nexus Instance",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Instance SG",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Allow IO to Nexus Instance",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8081,
            "id": "sgrule-3938104960",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d7e9271a932689ed",
            "self": false,
            "source_security_group_id": "sg-0798dc4a465fee998",
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nexus-instance",
            "module.sharedservicesvpc.aws_vpc.this",
            "aws_security_group.https-lb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "rialtic-nexus-logbucket",
                "enabled": true,
                "prefix": "artifacts"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:loadbalancer/app/nexus-lb/f25ce4e096e1435e",
            "arn_suffix": "app/nexus-lb/f25ce4e096e1435e",
            "dns_name": "nexus-lb-470583461.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:726998074318:loadbalancer/app/nexus-lb/f25ce4e096e1435e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nexus-lb",
            "security_groups": [
              "sg-0798dc4a465fee998"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0842d641587007c2e"
              },
              {
                "subnet_id": "subnet-0a36b8ad484b4b855"
              },
              {
                "subnet_id": "subnet-0fcfc7de89f1c6133"
              }
            ],
            "subnets": [
              "subnet-0842d641587007c2e",
              "subnet-0a36b8ad484b4b855",
              "subnet-0fcfc7de89f1c6133"
            ],
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "nexus-lb",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "nexus-lb",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0b9db42b0a586951d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.log_bucket.aws_s3_bucket_policy.this",
            "module.log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.https-lb",
            "module.log_bucket.data.aws_elb_service_account.this",
            "module.log_bucket.data.aws_iam_policy_document.combined",
            "module.log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.log_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.log_bucket.aws_s3_bucket.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:listener/app/nexus-lb/f25ce4e096e1435e/ec0d7587aecaf005",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:726998074318:listener/app/nexus-lb/f25ce4e096e1435e/ec0d7587aecaf005",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:loadbalancer/app/nexus-lb/f25ce4e096e1435e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Load Balancer",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Load Balancer",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.log_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.sharedservicesvpc.aws_vpc.this",
            "aws_security_group.nexus-instance",
            "data.aws_ami.nexus",
            "module.alb.aws_lb.this",
            "module.log_bucket.data.aws_iam_policy_document.combined",
            "aws_iam_role.cw_logging_role",
            "module.log_bucket.aws_s3_bucket_policy.this",
            "module.log_bucket.data.aws_elb_service_account.this",
            "module.log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_instance.nexus",
            "aws_security_group.https-lb",
            "module.log_bucket.aws_s3_bucket.this",
            "module.sharedservicesvpc.aws_subnet.public",
            "aws_iam_instance_profile.nexus_profile"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:listener/app/nexus-lb/f25ce4e096e1435e/3ac21b7bce2f842b",
            "certificate_arn": "arn:aws:acm:us-east-1:726998074318:certificate/cede831e-95b1-4af7-8771-868956038239",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:726998074318:listener/app/nexus-lb/f25ce4e096e1435e/3ac21b7bce2f842b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:loadbalancer/app/nexus-lb/f25ce4e096e1435e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Load Balancer",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Nexus Load Balancer",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.log_bucket.aws_s3_bucket.this",
            "module.log_bucket.aws_s3_bucket_policy.this",
            "module.log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.sharedservicesvpc.aws_subnet.public",
            "aws_iam_role.cw_logging_role",
            "aws_instance.nexus",
            "aws_security_group.nexus-instance",
            "module.log_bucket.data.aws_iam_policy_document.combined",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.https-lb",
            "module.log_bucket.data.aws_elb_service_account.this",
            "data.aws_ami.nexus",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.log_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "aws_iam_instance_profile.nexus_profile",
            "data.aws_acm_certificate.shared"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452",
            "arn_suffix": "targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:726998074318:targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nexus-20210630224945836900000001",
            "name_prefix": "nexus-",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "InstanceTargetGroupTag": "baz",
              "Name": "nexus-",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "InstanceTargetGroupTag": "baz",
              "Name": "nexus-",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Nexus Load Balancing",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.log_bucket.data.aws_elb_service_account.this",
            "module.log_bucket.data.aws_iam_policy_document.combined",
            "module.log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.log_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.sharedservicesvpc.aws_subnet.public",
            "aws_iam_instance_profile.nexus_profile",
            "aws_iam_role.cw_logging_role",
            "aws_instance.nexus",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.https-lb",
            "module.alb.aws_lb.this",
            "module.log_bucket.aws_s3_bucket.this",
            "aws_security_group.nexus-instance",
            "data.aws_ami.nexus",
            "module.log_bucket.aws_s3_bucket_policy.this",
            "module.log_bucket.data.aws_iam_policy_document.elb_log_delivery"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:726998074318:targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452-20210630224947656600000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:726998074318:targetgroup/nexus-20210630224945836900000001/bfc5c2ffaec63452",
            "target_id": "i-06ee4edc8918e1645"
          },
          "dependencies": [
            "aws_security_group.nexus-instance",
            "module.log_bucket.data.aws_iam_policy_document.lb_log_delivery",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.alb.aws_lb_target_group.main",
            "module.log_bucket.aws_s3_bucket.this",
            "module.log_bucket.data.aws_iam_policy_document.combined",
            "module.log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "aws_iam_role.cw_logging_role",
            "aws_instance.nexus",
            "module.log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "aws_iam_instance_profile.nexus_profile",
            "aws_security_group.https-lb",
            "data.aws_ami.nexus",
            "module.alb.aws_lb.this",
            "module.log_bucket.aws_s3_bucket_policy.this",
            "module.log_bucket.data.aws_elb_service_account.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:vpc-endpoint/vpce-0e70f2fb9f942cdfd",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-0e70f2fb9f942cdfd",
            "owner_id": "726998074318",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0881f606db095ab97",
              "rtb-08c547def0f99dfbd"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Shared Services S3 Endpoint",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Prevent Use of NAT Gateway for private S3",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "Shared Services S3 Endpoint",
              "Owner": "operations",
              "Prod": "true",
              "Purpose": "Prevent Use of NAT Gateway for private S3",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_route_table.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.sharedservicesvpc.aws_route_table.intra",
            "module.sharedservicesvpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:route-table/rtb-031ae6ac6f1491fa2",
            "default_route_table_id": "rtb-031ae6ac6f1491fa2",
            "id": "rtb-031ae6ac6f1491fa2",
            "owner_id": "726998074318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-085f2c408b385a0f6",
            "domain": "vpc",
            "id": "eipalloc-05ffafaa20ea653a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e40ad60510a9d146",
            "private_dns": "ip-10-0-17-230.ec2.internal",
            "private_ip": "10.0.17.230",
            "public_dns": "ec2-18-213-191-109.compute-1.amazonaws.com",
            "public_ip": "18.213.191.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:internet-gateway/igw-0e9824ba8a2ed0f47",
            "id": "igw-0e9824ba8a2ed0f47",
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ffafaa20ea653a7",
            "connectivity_type": "public",
            "id": "nat-06761716f5ff9ac14",
            "network_interface_id": "eni-0e40ad60510a9d146",
            "private_ip": "10.0.17.230",
            "public_ip": "18.213.191.109",
            "subnet_id": "subnet-0fcfc7de89f1c6133",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_internet_gateway.this",
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0881f606db095ab971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06761716f5ff9ac14",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0881f606db095ab97",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_nat_gateway.this",
            "module.sharedservicesvpc.aws_route_table.private",
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_eip.nat",
            "module.sharedservicesvpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9824ba8a2ed0f47",
            "id": "r-rtb-08c547def0f99dfbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c547def0f99dfbd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_internet_gateway.this",
            "module.sharedservicesvpc.aws_route_table.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:route-table/rtb-0881f606db095ab97",
            "id": "rtb-0881f606db095ab97",
            "owner_id": "726998074318",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06761716f5ff9ac14",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:route-table/rtb-08c547def0f99dfbd",
            "id": "rtb-08c547def0f99dfbd",
            "owner_id": "726998074318",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9824ba8a2ed0f47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f89173192d6f5d",
            "route_table_id": "rtb-0881f606db095ab97",
            "subnet_id": "subnet-0bd4707700b5fb3b3"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_route_table.private",
            "module.sharedservicesvpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9b76caf02b6ea1",
            "route_table_id": "rtb-0881f606db095ab97",
            "subnet_id": "subnet-03167ae0cc945bbae"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_route_table.private",
            "module.sharedservicesvpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fea16a715b9d8d47",
            "route_table_id": "rtb-0881f606db095ab97",
            "subnet_id": "subnet-0bf755d07d1b6b0ab"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_route_table.private",
            "module.sharedservicesvpc.aws_subnet.private",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc8a03f366de1c2e",
            "route_table_id": "rtb-08c547def0f99dfbd",
            "subnet_id": "subnet-0fcfc7de89f1c6133"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_route_table.public",
            "module.sharedservicesvpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f0fb9be2949f88e",
            "route_table_id": "rtb-08c547def0f99dfbd",
            "subnet_id": "subnet-0842d641587007c2e"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sharedservicesvpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674e546577d2ab10",
            "route_table_id": "rtb-08c547def0f99dfbd",
            "subnet_id": "subnet-0a36b8ad484b4b855"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_route_table.public",
            "module.sharedservicesvpc.aws_subnet.public",
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-0bd4707700b5fb3b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bd4707700b5fb3b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-03167ae0cc945bbae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03167ae0cc945bbae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1b",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1b",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-0bf755d07d1b6b0ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bf755d07d1b6b0ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1c",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-private-us-east-1c",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-0fcfc7de89f1c6133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.17.0/24",
            "id": "subnet-0fcfc7de89f1c6133",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1a",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-0842d641587007c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.18.0/24",
            "id": "subnet-0842d641587007c2e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1b",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1b",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:subnet/subnet-0a36b8ad484b4b855",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.19.0/24",
            "id": "subnet-0a36b8ad484b4b855",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1c",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services-public-us-east-1c",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b9db42b0a586951d"
          },
          "dependencies": [
            "module.sharedservicesvpc.aws_vpc.this",
            "module.sharedservicesvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sharedservicesvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:726998074318:vpc/vpc-0b9db42b0a586951d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b24b2d15928fee5e",
            "default_route_table_id": "rtb-031ae6ac6f1491fa2",
            "default_security_group_id": "sg-0d70b17df37264ac0",
            "dhcp_options_id": "dopt-79fb6003",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9db42b0a586951d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-031ae6ac6f1491fa2",
            "owner_id": "726998074318",
            "tags": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            },
            "tags_all": {
              "CostCenter": "devsecops",
              "EOLDate": "2050-12-01",
              "Environment": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT:zip:prod",
              "Name": "shared-services",
              "Owner": "operations",
              "Prod": "true",
              "Source": "io.rialtic.bootstrap:shared-services:0.9.0-SNAPSHOT",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}